// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`publish-document-with-descendants should handle publishing a non-existent document 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"Error","detail":"Request failed with status 404: Not Found","status":500}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`publish-document-with-descendants should publish a document and its descendants 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;
